# chack_ecu

./: CMakeLists.txt  README.md  ecu_sim  technical_report.md
include/: control.h  fault.h  input.h  log.h  mode.h  state.h  types.h
python_test/: test_report.md  test_runner.py
src/: control.c  fault.c  input.c  log.c  main.c  mode.c  state.c
